Hide illegal reflective access warnings for jdk.compiler.